--- a/experiments/control_mcmc_dropout.ipynb
+++ b/experiments/control_mcmc_dropout.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "beec3fdf-884c-4ba2-9187-1768bef216a5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
     "import torch\n",
     "from torchvision import datasets, transforms\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from model_dropout import NetNormalDropout\n",
+    "from models_control import NetMCDropout\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
     "from torch.optim import Adam"
@@ -52,14 +54,14 @@
    "outputs": [],
    "source": [
     "BATCH_SIZE = 32\n",
-    "EPOCHS = 6\n",
+    "EPOCHS = 10\n",
     "NUM_MASKS = 1\n",
     "LR = 0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "decc1b4c-7e4d-4e68-a60c-ac114500ce40",
    "metadata": {},
    "outputs": [],
@@ -67,7 +69,15 @@
     "seed = 42\n",
     "torch.manual_seed(seed)\n",
     "train_dataloader = DataLoader(dataset1, batch_size=BATCH_SIZE, shuffle=True)\n",
-    "test_dataloader = DataLoader(dataset2)"
+    "test_dataloader = DataLoader(dataset2, batch_size=1, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07f335f9",
+   "metadata": {},
+   "source": [
+    "### Overfitting portion (make dropout probabilites 0 to indicates fully connected)"
    ]
   },
   {
@@ -77,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = NetNormalDropout(num_masks=NUM_MASKS)\n",
+    "model = NetMCDropout(num_samples=20)\n",
     "opt = Adam(model.parameters(), lr=LR)\n",
     "lossFn = torch.nn.NLLLoss() # Use NLL since we our model is outputting a probability\n"
    ]
@@ -92,97 +102,150 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1875it [00:09, 190.41it/s]\n"
+      "1875it [00:16, 114.38it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.3834166666666667\n",
-      "Total loss: 3098.7840610146523\n"
+      "Train Accuracy: 0.4948166666666667\n",
+      "Total loss: 2964.8901982307434\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:09, 194.89it/s]\n"
+      "1875it [00:18, 101.49it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.4459666666666667\n",
-      "Total loss: 2794.993779361248\n"
+      "Train Accuracy: 0.5903333333333334\n",
+      "Total loss: 2621.1005333065987\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:09, 193.20it/s]\n"
+      "1875it [00:22, 83.01it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.4585\n",
-      "Total loss: 2735.7522891163826\n"
+      "Train Accuracy: 0.6169166666666667\n",
+      "Total loss: 2518.886078119278\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:09, 192.24it/s]\n"
+      "1875it [00:18, 103.08it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.4579\n",
-      "Total loss: 2742.133153319359\n"
+      "Train Accuracy: 0.6245166666666667\n",
+      "Total loss: 2488.490544319153\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:10, 184.77it/s]\n"
+      "1875it [00:19, 98.03it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.45855\n",
-      "Total loss: 2726.2131394147873\n"
+      "Train Accuracy: 0.6334666666666666\n",
+      "Total loss: 2463.157639205456\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:10, 178.14it/s]"
+      "1875it [00:19, 94.84it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.46068333333333333\n",
-      "Total loss: 2724.1490750312805\n"
+      "Train Accuracy: 0.63295\n",
+      "Total loss: 2464.2192950844765\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:18, 101.40it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.6404833333333333\n",
+      "Total loss: 2437.470103919506\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:18, 100.88it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.63465\n",
+      "Total loss: 2445.701071500778\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:19, 94.49it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.63995\n",
+      "Total loss: 2443.899631202221\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1875it [00:18, 101.38it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy: 0.6401666666666667\n",
+      "Total loss: 2441.0796144604683\n"
      ]
     },
     {
@@ -199,7 +262,7 @@
     "    trainCorrect = 0\n",
     "    totalLoss = 0\n",
     "    for idx, (x, y)  in tqdm(enumerate(train_dataloader)):\n",
-    "        logits = model.forward(x)\n",
+    "        logits = model.mc_dropout_predict(x)\n",
     "        loss = lossFn(logits, y)\n",
     "        totalLoss += loss.item()\n",
     "        opt.zero_grad()\n",
@@ -213,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "1c76d3c7",
    "metadata": {},
    "outputs": [
@@ -221,14 +284,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10000it [00:02, 4494.59it/s]"
+      "10000it [00:12, 803.30it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5685\n"
+      "0.6656\n"
      ]
     },
     {
@@ -243,7 +306,7 @@
     "test_correct = 0\n",
     "model.eval()\n",
     "for idx, (x, y)  in tqdm(enumerate(test_dataloader)):\n",
-    "    logits = model.forward(x)\n",
+    "    logits = model.mc_dropout_predict(x)\n",
     "    pred = torch.argmax(logits, dim=1)\n",
     "    test_correct += (pred == y).sum().item()\n",
     "print(test_correct / len(dataset2))"
