--- a/experiments/control_training.ipynb
+++ b/experiments/control_training.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "beec3fdf-884c-4ba2-9187-1768bef216a5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
     "import torch\n",
     "from torchvision import datasets, transforms\n",
     "import numpy as np\n",
