added comments and documentation on shallow experiments

--- a/experiments-shallow/mask_training.ipynb
+++ b/experiments-shallow/mask_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "beec3fdf-884c-4ba2-9187-1768bef216a5",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "288cf5a6",
+   "metadata": {},
+   "source": [
+    "### Fixed-Mask with bayesian inference training\n",
+    "This notebook evaluates the performance of the performance of using fixed dropout masks and evaluating a weighted average of them at inference time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b736030d",
    "metadata": {},
    "source": [
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "8fd47a49-430c-4746-8a71-37953fa95bab",
    "metadata": {},
    "outputs": [],
@@ -43,20 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "cf3c082b-1ba0-43dc-bfe5-79b01d2b9f54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset1 = datasets.MNIST('data', train=True, download=True,\n",
+    "dataset1 = datasets.MNIST('../data', train=True, download=True,\n",
     "                       transform=transform)\n",
-    "dataset2 = datasets.MNIST('data', train=False,\n",
+    "dataset2 = datasets.MNIST('../data', train=False,\n",
     "                       transform=transform)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "c569fb77",
    "metadata": {},
    "outputs": [],
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "decc1b4c-7e4d-4e68-a60c-ac114500ce40",
    "metadata": {},
    "outputs": [],
@@ -259,29 +268,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1c76d3c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"model.pth\")"
+    "torch.save(model.state_dict(), \"../model.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "dc8ebf46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Net(\n",
+       "  (fc1): Linear(in_features=784, out_features=256, bias=True)\n",
+       "  (dropout1): ConsistentMCDropout(p=0.4)\n",
+       "  (fc2): Linear(in_features=256, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# model = Net(num_masks=NUM_MASKS, dropout_probs=dropout_probs)\n",
-    "# model.load_state_dict(torch.load(\"model.pth\", weights_only=True))\n",
-    "# model.eval()"
+    "model = Net(num_masks=NUM_MASKS, dropout_probs=dropout_probs)\n",
+    "model.load_state_dict(torch.load(\"../model.pth\", weights_only=True))\n",
+    "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "9e19ded4",
    "metadata": {},
    "outputs": [],
@@ -291,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "76c30e77",
    "metadata": {},
    "outputs": [],
@@ -303,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "3892a64c",
    "metadata": {},
    "outputs": [
@@ -311,9 +335,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:09, 203.38it/s]\n",
-      "1875it [00:08, 212.30it/s]\n",
-      "1875it [00:08, 208.99it/s]\n"
+      "1875it [00:10, 173.16it/s]\n",
+      "1875it [00:09, 193.48it/s]\n",
+      "1875it [00:11, 164.10it/s]\n"
      ]
     }
    ],
@@ -327,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "78a9974f",
    "metadata": {},
    "outputs": [
@@ -335,8 +359,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.1033, 0.0996, 0.0965, 0.1004, 0.1000, 0.0969, 0.1052, 0.0980, 0.0998,\n",
-      "        0.1002])\n"
+      "tensor([0.1081, 0.0988, 0.0961, 0.0999, 0.1006, 0.0980, 0.1058, 0.0965, 0.1002,\n",
+      "        0.0960])\n"
      ]
     }
    ],
@@ -347,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "ef6a66ca",
    "metadata": {},
    "outputs": [
@@ -355,13 +379,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([6, 0])\n"
+      "tensor([0, 6])\n",
+      "torch.Size([2])\n"
      ]
     }
    ],
    "source": [
     "values, indices = torch.topk(dist, k=2)\n",
-    "print(indices)"
+    "print(indices)\n",
+    "print(indices.shape)"
    ]
   },
   {
@@ -403,6 +429,14 @@
     "    pred = torch.argmax(logits, dim=1)\n",
     "    test_correct += (pred == y).sum().item()\n",
     "print(test_correct / len(dataset2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76628139",
+   "metadata": {},
+   "source": [
+    "## Test accuracy was 76% which is a somewhat stronger than the controls"
    ]
   },
   {
