--- a/experiments-shallow/control_dropout.ipynb
+++ b/experiments-shallow/control_dropout.ipynb
@@ -13,10 +13,19 @@
     "from torchvision import datasets, transforms\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from models_control import NetMCDropout\n",
+    "from model_dropout import NetNormalDropout\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
     "from torch.optim import Adam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebdb303e",
+   "metadata": {},
+   "source": [
+    "### Control experiment: Not using masks and no dropout\n",
+    "This notebook evaluates the performance oof using a standard deep-net with 'normal' dropout layers in training which are removed at inferene"
    ]
   },
   {
@@ -35,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cf3c082b-1ba0-43dc-bfe5-79b01d2b9f54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset1 = datasets.MNIST('data', train=True, download=True,\n",
+    "dataset1 = datasets.MNIST('../data', train=True, download=True,\n",
     "                       transform=transform)\n",
-    "dataset2 = datasets.MNIST('data', train=False,\n",
+    "dataset2 = datasets.MNIST('../data', train=False,\n",
     "                       transform=transform)\n"
    ]
   },
@@ -54,14 +63,14 @@
    "outputs": [],
    "source": [
     "BATCH_SIZE = 32\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 6\n",
     "NUM_MASKS = 1\n",
     "LR = 0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "decc1b4c-7e4d-4e68-a60c-ac114500ce40",
    "metadata": {},
    "outputs": [],
@@ -69,15 +78,7 @@
     "seed = 42\n",
     "torch.manual_seed(seed)\n",
     "train_dataloader = DataLoader(dataset1, batch_size=BATCH_SIZE, shuffle=True)\n",
-    "test_dataloader = DataLoader(dataset2, batch_size=1, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07f335f9",
-   "metadata": {},
-   "source": [
-    "### Overfitting portion (make dropout probabilites 0 to indicates fully connected)"
+    "test_dataloader = DataLoader(dataset2)"
    ]
   },
   {
@@ -87,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = NetMCDropout(num_samples=20)\n",
+    "model = NetNormalDropout(num_masks=NUM_MASKS)\n",
     "opt = Adam(model.parameters(), lr=LR)\n",
     "lossFn = torch.nn.NLLLoss() # Use NLL since we our model is outputting a probability\n"
    ]
@@ -102,150 +103,97 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:16, 114.38it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Accuracy: 0.4948166666666667\n",
-      "Total loss: 2964.8901982307434\n"
+      "0it [00:00, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:18, 101.49it/s]\n"
+      "1875it [00:09, 190.41it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.5903333333333334\n",
-      "Total loss: 2621.1005333065987\n"
+      "Train Accuracy: 0.3834166666666667\n",
+      "Total loss: 3098.7840610146523\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:22, 83.01it/s] \n"
+      "1875it [00:09, 194.89it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.6169166666666667\n",
-      "Total loss: 2518.886078119278\n"
+      "Train Accuracy: 0.4459666666666667\n",
+      "Total loss: 2794.993779361248\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:18, 103.08it/s]\n"
+      "1875it [00:09, 193.20it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.6245166666666667\n",
-      "Total loss: 2488.490544319153\n"
+      "Train Accuracy: 0.4585\n",
+      "Total loss: 2735.7522891163826\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:19, 98.03it/s] \n"
+      "1875it [00:09, 192.24it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.6334666666666666\n",
-      "Total loss: 2463.157639205456\n"
+      "Train Accuracy: 0.4579\n",
+      "Total loss: 2742.133153319359\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:19, 94.84it/s] \n"
+      "1875it [00:10, 184.77it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.63295\n",
-      "Total loss: 2464.2192950844765\n"
+      "Train Accuracy: 0.45855\n",
+      "Total loss: 2726.2131394147873\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1875it [00:18, 101.40it/s]\n"
+      "1875it [00:10, 178.14it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 0.6404833333333333\n",
-      "Total loss: 2437.470103919506\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1875it [00:18, 100.88it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Accuracy: 0.63465\n",
-      "Total loss: 2445.701071500778\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1875it [00:19, 94.49it/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Accuracy: 0.63995\n",
-      "Total loss: 2443.899631202221\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1875it [00:18, 101.38it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Accuracy: 0.6401666666666667\n",
-      "Total loss: 2441.0796144604683\n"
+      "Train Accuracy: 0.46068333333333333\n",
+      "Total loss: 2724.1490750312805\n"
      ]
     },
     {
@@ -262,7 +210,7 @@
     "    trainCorrect = 0\n",
     "    totalLoss = 0\n",
     "    for idx, (x, y)  in tqdm(enumerate(train_dataloader)):\n",
-    "        logits = model.mc_dropout_predict(x)\n",
+    "        logits = model.forward(x)\n",
     "        loss = lossFn(logits, y)\n",
     "        totalLoss += loss.item()\n",
     "        opt.zero_grad()\n",
@@ -276,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1c76d3c7",
    "metadata": {},
    "outputs": [
@@ -284,14 +232,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10000it [00:12, 803.30it/s]"
+      "10000it [00:02, 4494.59it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6656\n"
+      "0.5685\n"
      ]
     },
     {
@@ -306,7 +254,7 @@
     "test_correct = 0\n",
     "model.eval()\n",
     "for idx, (x, y)  in tqdm(enumerate(test_dataloader)):\n",
-    "    logits = model.mc_dropout_predict(x)\n",
+    "    logits = model.forward(x)\n",
     "    pred = torch.argmax(logits, dim=1)\n",
     "    test_correct += (pred == y).sum().item()\n",
     "print(test_correct / len(dataset2))"
